<resources>
    <string name="app_name">Vinilos</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>
    <string name="nav_collectors_short">Colección</string>
    <string name="nav_create">Crear</string>
    <string name="create_section_label">Curaduría de archivo</string>
    <string name="create_title">Registra una nueva pieza</string>
    <string name="create_type_album">Álbumes</string>
...
